--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,46 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+body {
+  font-size: 30px;
+}
+h1,h2 {
+  font-family: "verdana";
+}
+header {
+  border: 10px solid red;
+}
+.class-list {
+  list-style-type: square;
+}
+.item {
+  border: 10px solid blue;
+}
+.even {
+  background-color: grey;
+}
+.odd {
+  background-color: black;
+  color: white;
+}
+#item1 {
+  font-size: 30px;
+}
+#item2 {
+  text-align: right;
+}
+#advanced-selectors li p {
+  background-color: grey;
+  padding: 20px;
+}
+#advanced-selectors li:nth-child(odd) p {
+  background-color: green;
+}
+#advanced-selectors li:nth-child(4) p a:hover {
+  text-decoration: none;
+}
+#advanced-selectors li:nth-child(5) p a:hover {
+  background-color: yellow;
+}
+#advanced-selectors li:nth-child(5) p a:active {
+  background-color: red;
+}
