--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
 body {
   font-size: 30px;
+  font-family: 'Roboto', sans-serif;
 }
 h1,h2 {
   font-family: "verdana";
